# futsplat

./: .gitignore  CMakeLists.txt  README.md  gen_data.py  gsplat.fut  main.cpp
.github/workflows/: futhark.yml
engine/: .gitignore  futhark.pkg  projection.fut  raster.fut  render.fut  spherical_harmonics.fut  tests.fut  types.fut  utils.fut
